--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,9 +6,10 @@
         <link rel="stylesheet" href="app.css"/>
     </head>
     <body>
-        Ciao Mondo
         <img src="images/node.png" alt="node logo" width="100" height="100">
+        <h1>Ciao Mondo</h1>
 
+        <!-- scripts -->
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
